# strange-information-structures

./: .gitattributes  .gitignore  02_Panov_Filatov.tex  02_Panov_Filatov_ru.tex  CLAUDE.md  pyproject.toml  weight_sorting.md
src/strange_information_structures/: best_discoveries.py  deep_dive.py  explore_deeper.py  explore_level6.py  level6_findings.py  verify.py
